--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,20 +1,26 @@
-name: Rust
+name: Build and Compile Rust Program on Windows
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-env:
-  CARGO_TERM_COLOR: always
+    branches:
+      - main  # Adjust this to your main branch name
 
 jobs:
   build:
-
-    runs-on: windows-latest
+    runs-on: windows-latest  # Use the latest Windows runner
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
+    - name: Checkout code
+      uses: actions/checkout@v2  # This step checks out your repository
+
+    - name: Set up Rust
+      uses: actions-rs/toolchain@v1  # Set up the Rust toolchain
+
+    - name: Build and Compile
+      run: cargo build --release  # Run your build command
+
+    - name: Archive Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-program-artifact
+        path: target/release/server_host.exe  # Replace with the actual path to your compiled binary
