--- a/.github/workflows/build_win.yml
+++ b/.github/workflows/build_win.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Archive Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: my-program-artifact
+        name: Win_Artifact
         path: target/release/server_host.exe  # Replace with the actual path to your compiled binary
