added regex as a dep. made the servers have specializations which allow the program to know certain logs to search for, Minecraft is the first to get support, I am classifying this as tier 2 support, as I am not done, but I need a checkpoint

--- a/src/defaultconfig.json
+++ b/src/defaultconfig.json
@@ -5,11 +5,13 @@
         {
             "name": "",
             "exePath": "",
+            "arguments": [
+                
+            ],
             "working_dir": "",
             "autoStart": true,
-            "arguments": [
-
-            ]
+            "specializedServerType": null,
+            "specializedServerInfo": null
         }
     ]
 }
