--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ cargo-watch = "8.4.0"
 crossterm = "0.27.0"
 futures = "0.3.28"
 futures-util = "0.3.28"
+regex = "1.10.2"
 serde = { version = "1.0.183", features = ["derive", "serde_derive"] }
 serde_json = { version = "1.0.105", features = ["float_roundtrip"] }
 tokio = { version = "1.31.0", features = ["full", "tracing"] }
@@ -21,3 +22,5 @@ tower = { version = "0.4.13", features = ["full", "tokio"] }
 tower-http = { version = "0.4.3", features = ["full", "trace"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
+[package.metadata.windows]
+resource = "icon.res"
