--- a/src/defaultconfig.json
+++ b/src/defaultconfig.json
@@ -1,6 +1,7 @@
 {
     "interface": "0.0.0.0",
     "port": "80",
+    "slave": false,
     "servers": [
         {
             "name": "",
@@ -13,5 +14,8 @@
             "specializedServerType": null,
             "specializedServerInfo": null
         }
+    ],
+    "slaveConnections": [
+        
     ]
 }
