--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,5 @@ tower = { version = "0.4.13", features = ["full", "tokio"] }
 tower-http = { version = "0.4.3", features = ["full", "trace"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
-[package.metadata.windows]
-resource = "icon.res"
+[target.'cfg(target_os = "windows")'.build-dependencies]
+winres = "0.1"
