--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,12 @@ tokio-tungstenite = "0.27.0"
 tower = { version = "0.5.2", features = ["full", "tokio"] }
 tower-http = { version = "0.6.6", features = ["full", "trace"] }
 tracing = "0.1.37"
-tracing-subscriber = "0.3.17"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 dashmap = "6.1.0"
 hyper = "1.7.0"
+chrono = { version = "0.4.42", features = ["serde"] }
+once_cell = "1.21.3"
+colored = "3.0.0"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
 winres = "0.1"
