--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,18 +16,33 @@ futures = "0.3.28"
 futures-util = "0.3.28"
 regex = "1.10.2"
 serde = { version = "1.0.183", features = ["derive", "serde_derive"] }
+
 serde_json = { version = "1.0.105", features = ["float_roundtrip"] }
+
+rmp-serde = "1.1.2"
+rmpv = "1.0.0"
 tokio = { version = "1.31.0", features = ["full", "tracing"] }
+
 tokio-tungstenite = "0.27.0"
+
 tower = { version = "0.5.2", features = ["full", "tokio"] }
+
 tower-http = { version = "0.6.6", features = ["full", "trace"] }
+
 tracing = "0.1.37"
+
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+
 dashmap = "6.1.0"
+
 hyper = "1.7.0"
+
 chrono = { version = "0.4.42", features = ["serde"] }
+
 once_cell = "1.21.3"
+
 colored = "3.0.0"
+
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
 winres = "0.1"
