--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 
 dashmap = "6.1.0"
+uuid = { version = "1.7.0", features = ["v4"] }
 
 hyper = "1.7.0"
 
